Break up BeadledomModule  in preparation for 3.x (#54)

--- a/archetype/simple-service/src/main/resources/archetype-resources/service/pom.xml
+++ b/archetype/simple-service/src/main/resources/archetype-resources/service/pom.xml
@@ -30,11 +30,19 @@
         </dependency>
         <dependency>
             <groupId>com.cerner.beadledom</groupId>
+            <artifactId>beadledom-health</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cerner.beadledom</groupId>
             <artifactId>beadledom-jaxrs-genericresponse</artifactId>
         </dependency>
         <dependency>
             <groupId>com.cerner.beadledom</groupId>
             <artifactId>beadledom-resteasy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cerner.beadledom</groupId>
+            <artifactId>beadledom-stagemonitor</artifactId>
         </dependency>
         <dependency>
             <groupId>com.cerner.beadledom</groupId>
